[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "hwtLib"
version = "2.9"
dependencies = [
   'hwt>=3.8',
]
requires-python = ">=3.8"
authors = [
  {name = "Michal Orsak", email = "Nic30original@gmail.com"},
]

description = "A library of hardware components and test for HWT framework (FPGA devel. tools)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
 'hdl', 'vhdl', 'verilog', 'systemverilog',
 'parser', 'preprocessor', 'antlr4', 'ast', 'code-generator']
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
  "Topic :: System :: Hardware",
  "Topic :: System :: Emulators",
  "Topic :: Utilities"
]


[project.urls]
Homepage = "https://github.com/Nic30/hwtLib"
Documentation = "https://hwtLib.readthedocs.io/en/latest/?badge=latest"
Repository = "https://github.com/Nic30/hwtLib.git"
"Bug Tracker" = "https://github.com/Nic30/hwtLib/issues"
